compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_more_two.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..3 of int := init(1,2,3,4,5)"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:29..44: expected 3 elements, found 5
| error for src/main.t:29..44: `init` list has 2 extra elements
