compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_not_comp_time.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var c : int\nvar a : array 1..1 of int := init(c)"
---
"c"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"a"@"src/main.t:16..17" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:46..47: cannot compute `c` at compile-time
| error for src/main.t:46..47: `c` is a reference to a variable, not a constant
| note for src/main.t:4..5: `c` declared here
