compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_on_dynamic.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var c : int\nvar a : array 1..c of int := init(1)"
---
"c"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"a"@"src/main.t:16..17" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:41..48: cannot use `init` here
| error for src/main.t:41..48: `init` initializer cannot be used for dynamically sized arrays
| info: dynamically-sized `array`s cannot initialized using `init` since their size is not known at compile-time
