compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_not_dynamic_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var c : int\ntype _ : array 1 .. c of int"
---
"c"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"_"@"src/main.t:17..18" [Type]: alias[DefId(PackageId(3072), LocalDefId(1))] of array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:32..33: cannot compute `c` at compile-time
| error for src/main.t:32..33: `c` is a reference to a variable, not a constant
| note for src/main.t:4..5: `c` declared here
