compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_not_index_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array real of real"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of array ( real, ) of real
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..19: mismatched types
| error for src/main.t:15..19: `real` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range
