compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_int.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array int, 1..2 of int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( int, range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..18: index range is too large
| error for src/main.t:15..18: a range over all `int` values is too large
| info: use a range type to shrink the range of elements
