compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_large.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array -16#7FFFFFFF..16#7FFFFFFF, 1..2 of int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), range of `int` (Unevaluated(PackageId(3072), BodyId(2)) .. Expr(Unevaluated(PackageId(3072), BodyId(3)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:9..53: `array` has too many elements
| error for src/main.t:9..53: overflow while computing element count
